@@ -1,3 +1,8 @@
+2020-08-08  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>
+
+	* fontmap.[ch], pdffont.[ch], tt_aux.[ch], tt_cmap.[ch]:
+	Use uint32_t for TTC index.
+
 2020-07-31  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>
 
 	* cid.c: Avoid accessing array elements exceeding max array index.
